add habits fieldset

--- a/culturama/index.html
+++ b/culturama/index.html
@@ -106,6 +106,58 @@
                         <input type="text" name="city" id="city">
                     </div>
                 </fieldset>
+                <fieldset>
+                    <legend>Hábitos</legend>
+                    <div>
+                        <h2>Redes Sociais</h2>
+                        <div>
+                            <input type="checkbox" name="social" id="instagram">
+                            <label for="instagram" value="instagram">Instagram</label>
+                        </div>
+                        <div>
+                            <input type="checkbox" name="social" id="facebook">
+                            <label for="facebook" value="facebook">Facebook</label>
+                        </div>
+                        <div>
+                            <input type="checkbox" name="social" id="tiktok">
+                            <label for="tiktok" value="tiktok">TikTok</label>
+                        </div>
+                        <div>
+                            <input type="checkbox" name="social" id="youtube">
+                            <label for="youtube" value="youtube">YouTube</label>
+                        </div>
+                        <div>
+                            <input type="checkbox" name="social" id="linkedin">
+                            <label for="linkedin" value="linkedin">LinkedIn</label>
+                        </div>
+                        <div>
+                            <input type="checkbox" name="social" id="x">
+                            <label for="x" value="x">X (Twitter)</label>
+                        </div>
+                        <div>
+                            <input type="checkbox" name="social" id="whatsapp">
+                            <label for="whatsapp" value="whatsapp">WhatsApp</label>
+                        </div>
+                        <div>
+                            <input type="checkbox" name="social" id="telegram">
+                            <label for="telegram" value="telegram">Telegram</label>
+                        </div>
+                    </div>
+                    <div>
+                        <label for="musicStyle">Estilo Musical</label>
+                        <input type="text" name="musicStyle" id="musicStyle" list="musicStyleList">
+                        <datalist id="musicStyleList">
+                            <option value="Rock">
+                            <option value="Pop">
+                            <option value="Jazz">
+                            <option value="Eletrônica">
+                        </datalist>
+                    </div>
+                    <div>
+                        <label for="favoriteColor">Cor favorita</label>
+                        <input type="color" name="favoriteColor" id="favoriteColor">
+                    </div>
+                </fieldset>
 
                 <input type="submit" value="Enviar">
             </form>
