feature: confirmation fieldset with LGPD consent and result email options

--- a/culturama/index.html
+++ b/culturama/index.html
@@ -176,8 +176,20 @@
                         <textarea name="userComment" id="comment" placeholder="Digite aqui sua opinião"></textarea>
                     </div>
                 </fieldset>
+                <fieldset>
+                    <legend>Confirmações</legend>
+                    <div>
+                        <input type="checkbox" name="userLGPD" id="LGPD" value="true" required>
+                        <label for="LGPD">Aceito participar da pesquisa</label>
+                    </div>
+                    <div>
+                        <input type="checkbox" name="userResult" id="Result">
+                        <label for="Result">Quero receber o resultado por email</label>
+                    </div>
+                </fieldset>
 
                 <input type="submit" value="Enviar">
+                <input type="reset" value="Limpar">
             </form>
         </section>
     </main>
