--- a/culturama/index.html
+++ b/culturama/index.html
@@ -5,12 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pesquisa Culturama</title>
+    <link rel="shortcut icon" href="img/culturama-favico.png" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
 
     <header class="container">
+        <img src="img/logo-culturama.png" alt="Logo Culturama">
         <h1>Pesquisa online</h1>
     </header>
 
