--- a/culturama/index.html
+++ b/culturama/index.html
@@ -7,16 +7,17 @@
     <title>Pesquisa Culturama</title>
     <link rel="shortcut icon" href="img/culturama-favico.png" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&family=Work+Sans&display=swap" rel="stylesheet">
 </head>
 
 <body>
-
-    <header class="container">
-        <img src="img/logo-culturama.png" alt="Logo Culturama">
-        <h1>Pesquisa online</h1>
-    </header>
-
-    <main class="container">
+    <main>
+        <header>
+            <img src="img/logo-culturama.png" alt="Logo Culturama">
+            <h1>Pesquisa online</h1>
+        </header>
         <section>
             <form action="" method="get">
 
@@ -40,7 +41,8 @@
                     </div>
                     <div>
                         <label for="phone">Telefone</label>
-                        <input type="tel" name="userPhone" id="phone" maxlength="11" placeholder="DDD + num">
+                        <input type="tel" name="userPhone" id="phone" pattern="[0-9]{11}" maxlength="11"
+                            placeholder="DDD + num">
                     </div>
                     <div>
                         <label for="photo">Upload de foto</label>
@@ -51,7 +53,7 @@
                 <fieldset>
                     <legend>Perfil</legend>
                     <div>
-                        <h2>Gênero</h2>
+                        <p>Gênero</p>
                         <input type="radio" name="userGender" id="genderMale" value="Masculino">
                         <label for="genderMale">Masculino</label>
                         <input type="radio" name="userGender" id="genderFemale" value="Feminino">
@@ -111,7 +113,7 @@
                 <fieldset>
                     <legend>Hábitos</legend>
                     <div>
-                        <h2>Redes Sociais</h2>
+                        <p>Redes Sociais</p>
                         <div>
                             <input type="checkbox" name="userSocial" id="instagram" value="Instagram">
                             <label for="instagram">Instagram</label>
@@ -163,7 +165,7 @@
                 <fieldset>
                     <legend>Opinião</legend>
                     <div>
-                        <h2>O que você acha da qualidade do nosso serviço?</h2>
+                        <p>O que você acha da qualidade do nosso serviço?</p>
                         <input type="radio" name="userServiceQuality" id="qualityOtimo" value="Otimo">
                         <label for="qualityOtimo">Ótimo</label>
                         <input type="radio" name="userServiceQuality" id="qualityBom" value="Bom">
@@ -195,7 +197,6 @@
             </form>
         </section>
     </main>
-
 </body>
 
 </html>
