feat: Update page title and adjust field validations

--- a/culturama/index.html
+++ b/culturama/index.html
@@ -16,7 +16,7 @@
     <main>
         <header>
             <img src="img/logo-culturama.png" alt="Logo Culturama">
-            <h1>Pesquisa online</h1>
+            <h1>Pesquisa de opinião</h1>
         </header>
         <section>
             <form action="" method="get">
@@ -41,7 +41,7 @@
                     </div>
                     <div>
                         <label for="phone">Telefone</label>
-                        <input type="tel" name="userPhone" id="phone" pattern="[0-9]{11}" maxlength="11"
+                        <input type="tel" name="userPhone" id="phone" pattern="[0-9]{11}" minlength="11" maxlength="11"
                             placeholder="DDD + num">
                     </div>
                     <div>
