--- a/culturama/index.html
+++ b/culturama/index.html
@@ -42,11 +42,14 @@
                     <div>
                         <label for="phone">Telefone</label>
                         <input type="tel" name="userPhone" id="phone" pattern="[0-9]{11}" minlength="11" maxlength="11"
-                            placeholder="DDD + num">
+                            placeholder="DDD + num" aria-describedby="phoneHelp">
+                        <small id="phoneHelp">Preencha com 11 dígitos e no formato: DDD + número sem espaço ou
+                            hífen.</small>
                     </div>
                     <div>
                         <label for="photo">Upload de foto</label>
-                        <input type="file" accept="image/*" name="userPhoto" id="photo">
+                        <input type="file" accept="image/*" name="userPhoto" id="photo" aria-describedby="photoHelp">
+                        <small id="photoHelp">Envie uma foto no formato PNG ou JPEG</small>
                     </div>
                 </fieldset>
 
@@ -192,8 +195,8 @@
                     </div>
                 </fieldset>
 
-                <input type="submit" value="Enviar">
-                <input type="reset" value="Limpar">
+                <input type="submit" value="Enviar" aria-label="Enviar dados">
+                <input type="reset" value="Limpar" aria-label="Limpar Formulário">
             </form>
         </section>
     </main>
