feat: Update description and improve accessibility on the homepage.

--- a/techboard/index.html
+++ b/techboard/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Tecboard App - monitore suas aplicações em tempo real, para que elas nunca saiam do ar sem você saber">
     <title>Landing Page</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -29,9 +31,10 @@
             <p>Monitoramento em tempo real com alertas inteligentes para sua aplicação nunca sair do ar sem você saber.
             </p>
         </section>
-        <a href="#">Testar versão demo</a>
+        <a href="#" title="Teste a versão demo do App Tecboard">Testar versão demo</a>
 
-        <img src="img/desktop.png" alt="Imagem principal">
+        <img src="img/desktop.png"
+            alt="Tela do App Tecboard em dois celulares sobrepostos, com destaque para o hub de eventos de tecnologia.">
     </main>
 </body>
 
