feat: Add Open Graph metadata to improve social media sharing.

--- a/techboard/index.html
+++ b/techboard/index.html
@@ -6,6 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
         content="Tecboard App - monitore suas aplicações em tempo real, para que elas nunca saiam do ar sem você saber">
+    <meta name="og:title" content="Tecboard App">
+    <meta name="og:description"
+        content="Monitore suas aplicações em tempo real, para que elas nunca saiam do ar sem você saber">
+    <meta name="og:image" content="https://guialves2003.github.io/alura/techboard/img/desktop.png">
+    <meta name="og:type" content="website">
+    <meta name="og:url" content="https://guialves2003.github.io/alura/techboard/index.html">
+
     <title>Landing Page</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,6 +21,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Unbounded:wght@700&display=swap"
         rel="stylesheet">
 
+    <link rel="shortcut icon" href="img/favicon-dark.svg" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
