feat: Update Open Graph and Twitter metadata to improve social media sharing.

--- a/techboard/index.html
+++ b/techboard/index.html
@@ -4,16 +4,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- HTML Meta Tags -->
+    <title>Tecboard App</title>
     <meta name="description"
-        content="Tecboard App - monitore suas aplicações em tempo real, para que elas nunca saiam do ar sem você saber">
-    <meta name="og:title" content="Tecboard App">
-    <meta name="og:description"
         content="Monitore suas aplicações em tempo real, para que elas nunca saiam do ar sem você saber">
-    <meta name="og:image" content="https://guialves2003.github.io/alura/techboard/img/desktop.png">
-    <meta name="og:type" content="website">
-    <meta name="og:url" content="https://guialves2003.github.io/alura/techboard/index.html">
 
-    <title>Landing Page</title>
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://guialves2003.github.io/alura/techboard/index.html">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Tecboard App">
+    <meta property="og:description"
+        content="Monitore suas aplicações em tempo real, para que elas nunca saiam do ar sem você saber">
+    <meta property="og:image" content="https://guialves2003.github.io/alura/techboard/img/desktop.png">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="guialves2003.github.io">
+    <meta property="twitter:url" content="https://guialves2003.github.io/alura/techboard/index.html">
+    <meta name="twitter:title" content="Tecboard App">
+    <meta name="twitter:description"
+        content="Monitore suas aplicações em tempo real, para que elas nunca saiam do ar sem você saber">
+    <meta name="twitter:image" content="https://guialves2003.github.io/alura/techboard/img/desktop.png">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
