--- a/jornada-viagens/index.html
+++ b/jornada-viagens/index.html
@@ -1,15 +1,31 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="css/style.css" />
+        <title>Jornada Viagens</title>
+    </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
-    <title>Jornada Viagens</title>
-</head>
-
-<body>
-
-</body>
-
+    <body>
+        <header>
+            <a href="./index.html">
+                <img src="img/logo-icon-branca.png" alt="Bussola do logo Jornada Viagens na cor branca" title="Voltar para a página principal" />
+            </a>
+            <img src="img/menu.png" alt="Menu" />
+            <nav>
+                <ul>
+                    <li>
+                        <a href="blog.html" title="Acessar Blog">Blog</a>
+                    </li>
+                    <li>
+                        <a href="pacotes.html" title="Acessar Pacotes de Viagem">Pacotes de viagem</a>
+                    </li>
+                    <li>
+                        <a href="contato.html" title="Acessar Contato">Contato</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+    </body>
 </html>
