feat: (jornada-viagens) Refactor the header structure and add a class to the logo.

--- a/jornada-viagens/index.html
+++ b/jornada-viagens/index.html
@@ -9,23 +9,25 @@
 
     <body>
         <header>
-            <a href="./index.html">
+            <a href="./index.html" class="logo">
                 <img src="img/logo-icon-branca.png" alt="Bussola do logo Jornada Viagens na cor branca" title="Voltar para a página principal" />
             </a>
-            <img src="img/menu.png" alt="Menu" />
-            <nav>
-                <ul>
-                    <li>
-                        <a href="blog.html" title="Acessar Blog">Blog</a>
-                    </li>
-                    <li>
-                        <a href="pacotes.html" title="Acessar Pacotes de Viagem">Pacotes de viagem</a>
-                    </li>
-                    <li>
-                        <a href="contato.html" title="Acessar Contato">Contato</a>
-                    </li>
-                </ul>
-            </nav>
+            <div class="nav-menu">
+                <img src="img/menu.png" alt="Menu" />
+                <nav>
+                    <ul>
+                        <li>
+                            <a href="blog.html" title="Acessar Blog">Blog</a>
+                        </li>
+                        <li>
+                            <a href="pacotes.html" title="Acessar Pacotes de Viagem">Pacotes de viagem</a>
+                        </li>
+                        <li>
+                            <a href="contato.html" title="Acessar Contato">Contato</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
         </header>
     </body>
 </html>
