feat: (jornada-viagens) Refactor navigation structure and enhance accessibility with semantic elements.

--- a/jornada-viagens/index.html
+++ b/jornada-viagens/index.html
@@ -13,17 +13,20 @@
                 <img src="img/logo-icon-branca.png" alt="Bussola do logo Jornada Viagens na cor branca" title="Voltar para a página principal" />
             </a>
             <div class="nav-menu">
-                <img src="img/menu.png" alt="Menu" />
+                <label for="menu">
+                    <img src="img/menu.png" alt="Menu" />
+                </label>
+                <input type="checkbox" name="" id="menu" hidden />
                 <nav>
-                    <ul>
+                    <ul class="list-links">
                         <li>
-                            <a href="blog.html" title="Acessar Blog">Blog</a>
+                            <a class="nav-link" href="blog.html" title="Acessar Blog">Blog</a>
                         </li>
                         <li>
-                            <a href="pacotes.html" title="Acessar Pacotes de Viagem">Pacotes de viagem</a>
+                            <a class="nav-link" href="pacotes.html" title="Acessar Pacotes de Viagem">Pacotes de viagem</a>
                         </li>
                         <li>
-                            <a href="contato.html" title="Acessar Contato">Contato</a>
+                            <a class="nav-link" href="contato.html" title="Acessar Contato">Contato</a>
                         </li>
                     </ul>
                 </nav>
