--- a/jornada-viagens/index.html
+++ b/jornada-viagens/index.html
@@ -9,27 +9,30 @@
 
     <body>
         <header>
-            <a href="./index.html" class="logo">
-                <img src="img/logo-icon-branca.png" alt="Bussola do logo Jornada Viagens na cor branca" title="Voltar para a página principal" />
-            </a>
-            <div class="nav-menu">
-                <label for="menu">
-                    <img src="img/menu.png" alt="Menu" />
-                </label>
-                <input type="checkbox" name="" id="menu" hidden />
-                <nav>
-                    <ul class="list-links">
-                        <li>
-                            <a class="nav-link" href="blog.html" title="Acessar Blog">Blog</a>
-                        </li>
-                        <li>
-                            <a class="nav-link" href="pacotes.html" title="Acessar Pacotes de Viagem">Pacotes de viagem</a>
-                        </li>
-                        <li>
-                            <a class="nav-link" href="contato.html" title="Acessar Contato">Contato</a>
-                        </li>
-                    </ul>
-                </nav>
+            <div class="container">
+                <a href="./index.html" class="logo">
+                    <img src="img/logo-mobile-branca.png" class="logo-mobile" alt="Bussola do logo Jornada Viagens na cor branca" title="Voltar para a página principal" />
+                    <img src="img/logo-desktop-branca.png" class="logo-desktop" alt="Bussola do logo Jornada Viagens na cor branca" title="Voltar para a página principal" />
+                </a>
+                <div class="nav-menu">
+                    <label for="menu">
+                        <img src="img/menu.png" alt="Menu" />
+                    </label>
+                    <input type="checkbox" name="" id="menu" hidden />
+                    <nav>
+                        <ul class="list-links">
+                            <li>
+                                <a class="nav-link" href="blog.html" title="Acessar Blog">Blog</a>
+                            </li>
+                            <li>
+                                <a class="nav-link" href="pacotes.html" title="Acessar Pacotes de Viagem">Pacotes de viagem</a>
+                            </li>
+                            <li>
+                                <a class="nav-link" href="contato.html" title="Acessar Contato">Contato</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
             </div>
         </header>
     </body>
