--- a/jornada-viagens/index.html
+++ b/jornada-viagens/index.html
@@ -9,7 +9,7 @@
 
     <body>
         <header>
-            <div class="container">
+            <div class="container nav">
                 <a href="./index.html" class="logo">
                     <img src="img/logo-mobile-branca.png" class="logo-mobile" alt="Bussola do logo Jornada Viagens na cor branca" title="Voltar para a página principal" />
                     <img src="img/logo-desktop-branca.png" class="logo-desktop" alt="Bussola do logo Jornada Viagens na cor branca" title="Voltar para a página principal" />
@@ -35,5 +35,11 @@
                 </div>
             </div>
         </header>
+        <section class="hero">
+            <div class="hero-bg"></div>
+            <div class="container">
+                <p>Somos uma agência apaixonada por criar viagens inesquecíveis. Do destino à seleção das atividades, cuidamos de todos os detalhes para que você aproveite ao máximo cada momento da sua jornada!</p>
+            </div>
+        </section>
     </body>
 </html>
