--- a/jornada-viagens/index.html
+++ b/jornada-viagens/index.html
@@ -41,5 +41,13 @@
                 <p>Somos uma agência apaixonada por criar viagens inesquecíveis. Do destino à seleção das atividades, cuidamos de todos os detalhes para que você aproveite ao máximo cada momento da sua jornada!</p>
             </div>
         </section>
+        <section class="offers">
+            <div class="container">
+                <div class="section-title">
+                    <h2>Ofertas da Semana</h2>
+                    <hr />
+                </div>
+            </div>
+        </section>
     </body>
 </html>
