feat: (jornada-viagens) Offers section with matching offer cards and styles.

--- a/jornada-viagens/index.html
+++ b/jornada-viagens/index.html
@@ -47,6 +47,18 @@
                     <h2>Ofertas da Semana</h2>
                     <hr />
                 </div>
+                <div class="offers-cards">
+                    <article class="offer-card">
+                        <header>
+                            <p>Hotel+Aéreo</p>
+                            <h3>Japão<br /><span>R$ 4000</span></h3>
+                        </header>
+                        <section></section>
+                        <footer>
+                            <a href="" class="button">Ver detalhes</a>
+                        </footer>
+                    </article>
+                </div>
             </div>
         </section>
     </body>
